artwork slider fixed on mobile

--- a/src/style/layout/_common.scss
+++ b/src/style/layout/_common.scss
@@ -1612,6 +1612,7 @@ select {
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
+		width: 100%;
 
 		@include media('>=tablet') {
 			position: absolute;
